# proman

./: .env.example  .gitignore  .prettierignore  .prettierrc  .prettierrc.cjs  Cargo.toml  package.json  pnpm-lock.yaml  turbo.json
apps/admin/: package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
apps/admin/src/: app.html
apps/admin/src/lib/components/: ThemeSwitcher.svelte
apps/admin/src/routes/: +layout.svelte
apps/admin/types/: daisyui.ts
apps/server/: Cargo.toml  package.json
apps/server/src/: errors.rs  logger.rs  main.rs
apps/server/src/config/: env.rs
apps/server/src/database/: mongo.rs
apps/server/src/models/: process.rs
apps/server/src/repository/: process.rs
apps/server/src/routes/: process.rs
